kubernetes/application-deployments/nginx-example/nginx-example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: example
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  tls:
  - hosts:
    - example.com
    - example1.com
    secretName: nginx-example-tls
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: nginx-example-web
          servicePort: 80
        path: /(.*)
  - host: example1.com
    http:
      paths:
      - backend:
          serviceName: nginx-example-web
          servicePort: 80
        path: /(.*)


## In order to generate certificate for ingress with multiple domains, all domains should be pointing to ingress. If any of them is not pointing to ingress, the certificate might not be issued.
